--- a/develop/css/dev/utilites/_helpers.scss
+++ b/develop/css/dev/utilites/_helpers.scss
@@ -29,3 +29,14 @@
 .p-b-20 {padding-bottom: 20px;}
 .p-b-25 {padding-bottom: 25px;}
 .p-b-30 {padding-bottom: 30px;}
+
+
+a:not([class]) {
+	color: $ruby;
+	text-decoration: underline;
+	&:hover,
+	&:focus {
+		color: $ruby;
+		text-decoration: none;
+	}
+}
