--- a/develop/css/dev/utilites/_variables.scss
+++ b/develop/css/dev/utilites/_variables.scss
@@ -1,4 +1,7 @@
 // ---------------------  Variables
 
-$main_font: '', sans-serif;
-$main_color: #000;
+$main_font: 'HelveticaNeueCyr', sans-serif;
+$main_color: #635e5e;
+
+// Colors
+$ruby: #e31e24;
