--- a/develop/jade/includes/_vars.jade
+++ b/develop/jade/includes/_vars.jade
@@ -1,1 +1,4 @@
-- menu = ["Пункт 1", "Пункт 2"]
+- menu = ["О компании", "Наши работы", "Оплата и доставка", "Акции", "Гарантии", "Контакты"];
+- email = "cherrybook@cpmail.ru";
+- address = "Москва, 2-ой Кожевнический пер., д. 12";
+- phone = "+7 (495) 721-81-71";
