--- a/develop/css/dev/layouts/_header.scss
+++ b/develop/css/dev/layouts/_header.scss
@@ -175,6 +175,7 @@
 		@include position(absolute, 51px null null 0);
 		width: 100%;
 		opacity: 0;
+		z-index: 100;
 		&-list {
 			width: 100%;
 			margin: 0;
