--- a/develop/jade/index.jade
+++ b/develop/jade/index.jade
@@ -23,33 +23,68 @@ block content
 				.title.text-center.color-white Выберите формат и размер фотокниги
 				ul.format-block__tab-list
 					li.format-block__tab-list-item.active
-						img.format-block__tab-list-item-img(src="/img/1.png", alt="tab-img")
+						.format-block__tab-list-item-img
 						span.format-block__tab-list-item-text Книги на нитке
 					li.format-block__tab-list-item
-						img.format-block__tab-list-item-img(src="/img/2.png", alt="tab-img")
+						.format-block__tab-list-item-img
 						span.format-block__tab-list-item-text Премиум альбомы
 					li.format-block__tab-list-item
-						img.format-block__tab-list-item-img(src="/img/3.png", alt="tab-img")
+						.format-block__tab-list-item-img
 						span.format-block__tab-list-item-text Книга бабочка
 					li.format-block__tab-list-item
-						img.format-block__tab-list-item-img(src="/img/4.png", alt="tab-img")
+						.format-block__tab-list-item-img
 						span.format-block__tab-list-item-text Журнал
 					li.format-block__tab-list-item
-						img.format-block__tab-list-item-img(src="/img/5.png", alt="tab-img")
+						.format-block__tab-list-item-img
 						span.format-block__tab-list-item-text Брошюра
 		.format-block__tab-content
 			.container
-				.format-block__tab-block
+				.format-block__tab-block.active
 					.row
 						.col-sm-5
 							iframe(width="100%" height="315" src="https://www.youtube.com/embed/J1J_JCflB7w" frameborder="0" allowfullscreen)
 							.text-center.m-t-10
 								a.format-block__tab-block-link(href="#!") подробнее >>
 						.col-sm-7
+							ul.format-block__tab-block-list
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									p.format-block__tab-block-list-item-text 145 стр.
+									p.format-block__tab-block-list-item-price 6 440 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-2.png", alt="")
+									p.format-block__tab-block-list-item-text 100 стр.
+									p.format-block__tab-block-list-item-price 3 600 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									p.format-block__tab-block-list-item-text 145 стр.
+									p.format-block__tab-block-list-item-price 6 440 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									p.format-block__tab-block-list-item-text 100 стр.
+									p.format-block__tab-block-list-item-price 3 600 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-2.png", alt="")
+									p.format-block__tab-block-list-item-text 145 стр.
+									p.format-block__tab-block-list-item-price 6 440 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
+								li.format-block__tab-block-list-item
+									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									p.format-block__tab-block-list-item-text 100 стр.
+									p.format-block__tab-block-list-item-price 3 600 руб.
+									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
 				.format-block__tab-block
+					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis molestias odit ratione placeat necessitatibus, harum dolorum, quis accusantium assumenda saepe sed eos eaque reprehenderit, maiores vel tempora impedit sequi in?
 				.format-block__tab-block
+					iframe(width="100%" height="315" src="https://www.youtube.com/embed/J1J_JCflB7w" frameborder="0")
 				.format-block__tab-block
+					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, alias! Quia ex ratione iure dolores magni, natus eaque, eum eligendi, alias ut fugiat maxime corporis ad quae eveniet sapiente esse.
 				.format-block__tab-block
+					p 123 123 123
 	// / выбор формата и размера
 	// наши приемущества
 	.advantages-block
@@ -98,6 +133,37 @@ block content
 				- }
 	// / тематика книги
 	// форма
+	.form-block
+		.container
+			.form-block__inner
+				.title Секреты классных кадров карапузов
+				.row
+					.col-sm-7
+						.row
+							.col-sm-6
+								p.form-block__inner-title бесплатная книга!
+								.form-block__inner-slider-wrap
+									ul.form-block__inner-slider
+										li.form-block__inner-slider-item
+											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+										li.form-block__inner-slider-item
+											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+										li.form-block__inner-slider-item
+											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+							.col-sm-6
+								p.form-block__inner-text Введите свой e-mail и получите электронную книгу с секретами фотографирования детей, чтобы получались няшные фото!
+								p.form-block__inner-text Мы также будем присылать Вам интересные фотосоветы не чаще раза в неделю.
+								br
+								.text-center
+									form(action="#!")
+										.form-group
+											input.form-control(type="text" placeholder="Ваше имя")
+											img.form-label-img(src="/img/name.png", alt="")
+										.form-group
+											input.form-control(type="text" placeholder="Ваше e-mail")
+											img.form-label-img(src="/img/form-mail.png", alt="")
+										.form-group
+											button.btn(type="submit") Получить книгу!					
 	// / форма
 	// seo текст
 	.p-t-30.p-b-30
