--- a/develop/css/dev/_content.scss
+++ b/develop/css/dev/_content.scss
@@ -358,6 +358,7 @@ $slider-height: 509px;
 			width: 619px;
 			height: 581px;
 			background: url(../img/girl.png) 0 0 no-repeat;
+			background-size: 100%;
 		}
 	}
 }
