--- a/develop/css/dev/layouts/_header.scss
+++ b/develop/css/dev/layouts/_header.scss
@@ -109,7 +109,7 @@
 	&__social {
 		&-link {
 			display: inline-block;
-			margin: 0 5px;
+			margin: 0 5px 10px 5px;
 			@include transition(all 0.2s ease-in-out);
 			@include filter(grayscale(1));
 			opacity: 0.6;
