--- a/develop/css/dev/utilites/_base.scss
+++ b/develop/css/dev/utilites/_base.scss
@@ -23,3 +23,18 @@ button, input, textarea, select {
 .main-wrapper {
 	overflow: hidden;
 }
+.container {
+	position: relative;
+}
+.modal {
+	display: none;
+	width: 380px;
+	&__header {
+		&-title {
+			font-family: $cav;
+			margin: 30px 0 20px 0;
+			text-align: center;
+			font-size: 16px;
+		}
+	}
+}
