--- a/develop/jade/index.jade
+++ b/develop/jade/index.jade
@@ -9,9 +9,9 @@ block content
 	.container
 		.title.text-center Как выбрать фотокнигу?
 		.row.p-b-30
-			.col-sm-6.m-b-20
+			.col-sm-10.col-sm-offset-1.col-md-offset-0.col-md-6.m-b-20
 				iframe(width="100%" height="380" src="https://www.youtube.com/embed/J1J_JCflB7w" frameborder="0" allowfullscreen)
-			.col-sm-6.m-b-20
+			.col-sm-12.col-md-6.m-b-20
 				.description__block
 					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis felis in lacus commodo lobortis. Phasellus eget lorem nec diam sagittis gravida. Vestibulum rutrum justo eget maximus mattis. Maecenas ligula diam, mollis nec facilisis sit amet, tincidunt faucibus erat. Morbi dignissim justo non turpis maximus scelerisque. Aliquam molestie tortor dictum egestas ultricies. Etiam tristique, mi et aliquam auctor, enim felis blandit velit, nec consequat metus velit sed ipsum. Vestibulum sed felis tincidunt enim gravida interdum a et tellus. Maecenas lectus massa, bibendum nec dignissim quis, fringilla sit amet mi.
 					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis felis in lacus commodo lobortis. Phasellus eget lorem nec diam sagittis gravida. Vestibulum rutrum justo eget maximus mattis. Maecenas ligula diam, mollis nec facilisis sit amet, tincidunt faucibus erat. Morbi dignissim justo non turpis maximus scelerisque. Aliquam molestie tortor dictum egestas ultricies. Etiam tristique, mi et aliquam auctor, enim felis blandit velit, nec consequat metus velit sed ipsum. Vestibulum sed felis tincidunt enim gravida interdum a et tellus. Maecenas lectus massa, bibendum nec dignissim quis, fringilla sit amet mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis felis in lacus commodo lobortis. Phasellus eget lorem nec diam sagittis gravida. Vestibulum rutrum justo eget maximus mattis. Maecenas ligula diam, mollis nec facilisis sit amet, tincidunt faucibus erat. Morbi dignissim justo non turpis maximus scelerisque. Aliquam molestie tortor dictum egestas ultricies.
@@ -23,29 +23,29 @@ block content
 				.title.text-center.color-white Выберите формат и размер фотокниги
 				ul.format-block__tab-list
 					li.format-block__tab-list-item.active
-						.format-block__tab-list-item-img
+						.format-block__tab-list-item-img.hidden-sm
 						span.format-block__tab-list-item-text Книги на нитке
 					li.format-block__tab-list-item
-						.format-block__tab-list-item-img
+						.format-block__tab-list-item-img.hidden-sm
 						span.format-block__tab-list-item-text Премиум альбомы
 					li.format-block__tab-list-item
-						.format-block__tab-list-item-img
+						.format-block__tab-list-item-img.hidden-sm
 						span.format-block__tab-list-item-text Книга бабочка
 					li.format-block__tab-list-item
-						.format-block__tab-list-item-img
+						.format-block__tab-list-item-img.hidden-sm
 						span.format-block__tab-list-item-text Журнал
 					li.format-block__tab-list-item
-						.format-block__tab-list-item-img
+						.format-block__tab-list-item-img.hidden-sm
 						span.format-block__tab-list-item-text Брошюра
 		.format-block__tab-content
 			.container
 				.format-block__tab-block.active
 					.row
-						.col-sm-5
+						.col-md-5.col-sm-8.col-sm-offset-2.col-md-offset-0.m-b-30
 							iframe(width="100%" height="315" src="https://www.youtube.com/embed/J1J_JCflB7w" frameborder="0" allowfullscreen)
 							.text-center.m-t-10
 								a.format-block__tab-block-link(href="#!") подробнее >>
-						.col-sm-7
+						.col-md-7.col-sm-12
 							ul.format-block__tab-block-list
 								li.format-block__tab-block-list-item
 									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
@@ -138,7 +138,7 @@ block content
 			.form-block__inner
 				.title Секреты классных кадров карапузов
 				.row
-					.col-sm-7
+					.col-sm-12.col-md-7
 						.row
 							.col-sm-6
 								p.form-block__inner-title бесплатная книга!
